tdf#142845 editeng: don't update selection when formatting before sd paste

Regression from commit f0c25c751cf8e166a84b289746bce6202a40391d
(tdf#115783 sd: fix lost char attributes during in-table copy&paste,
2018-02-16), the problem was that the formatting before paste also
created an undo action, and executing it alters the selection, which was
not intended.

So in case the textbox contains "world" and we paste "hello", then the
undo will set the cursor at the end of "world", while the expected
result is to just undo the paste and the formatting of "world".

Fix the problem by not altering the selection in the undo of
Outliner::SetCharAttribs(), which is only called by sd/ in the
before-paste case, not anywhere else.

(cherry picked from commit fc4c0747e97bb997cc37263b3e86b07dab21fe25)

Change-Id: Ie4a08f57d22cd1862c02987a5f86089fda8a5d9d